# Good-Night-4th-Hackathon

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  reset_seats.sh  tsconfig.jest.json  tsconfig.json  tsconfig.playwright.json
.gemini/: settings.json
.husky/: pre-commit
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.gradle  database.sqlite  db.js  docker-compose.yml  env.example  go.mod  go.sum  init-db.js  jest.config.js  main.go  package-lock.json  package.json  pom.xml  pyproject.toml  server.js  test-api.js
backend/__tests__/: server.test.js
backend/backend/: Dockerfile  build.gradle  docker-compose.yml
backend/backend/src/integrationTest/java/org/own/backend/seats/: SeatIntegrationTest.java
backend/backend/src/integrationTest/resources/: application.properties
backend/backend/src/main/java/org/own/backend/: BackendApplication.java
backend/backend/src/main/java/org/own/backend/seats/: ApiExceptionHandler.java  Seat.java  SeatController.java  SeatInitializer.java  SeatRepository.java  SeatReservationRequest.java  SeatStatus.java
backend/backend/src/main/resources/: application.properties
backend/backend/src/test/java/org/own/backend/: BackendApplicationTests.java
backend/backend/src/test/java/org/own/backend/seats/: SeatsUnitTests.java
backend/cmd/auth/: auth.go
backend/cmd/database/: db.go  redis.go
backend/cmd/database/migrations/: init.sql
backend/cmd/handlers/: handler.go  seat.go
backend/cmd/models/: reservation.go  seat.go
backend/cmd/repositories/: repository.go  seat.go
backend/cmd/server/: router.go  server.go
backend/cmd/services/: seat.go  service.go
backend/config/api/: Cargo.toml
backend/config/api/src/: api.rs  api_config.rs  lib.rs
backend/config/database/: Cargo.toml
backend/config/database/src/: database.rs  lib.rs
backend/config/migration/: Cargo.toml
backend/config/migration/src/: lib.rs  m20250816_01_create_seat_table.rs  main.rs
backend/config/redis/: Cargo.toml
backend/config/redis/src/: lib.rs
backend/coverage/: lcov.info
backend/coverage/lcov-report/: index.html  server.js.html
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/hackathon/: .env  .gitignore  Dockerfile  build.gradle  docker-compose.yml
backend/hackathon/src/main/java/_th/hackathon/: HackathonApplication.java
backend/hackathon/src/main/java/_th/hackathon/common/: InventoryStatus.java  ReservationStatus.java
backend/hackathon/src/main/java/_th/hackathon/domain/catalog/controller/: CatalogController.java
backend/hackathon/src/main/java/_th/hackathon/domain/catalog/dto/: PerfSeatRes.java  PerformanceTimeRes.java  ShowTitleRes.java
backend/hackathon/src/main/java/_th/hackathon/domain/catalog/entity/: Performance.java  PerformanceSeat.java  Show.java
backend/hackathon/src/main/java/_th/hackathon/domain/catalog/repository/: PerformanceRepository.java  PerformanceSeatRepository.java  ShowRepository.java
backend/hackathon/src/main/java/_th/hackathon/domain/catalog/service/: CatalogService.java
backend/hackathon/src/main/java/_th/hackathon/domain/config/: SecurityConfig.java  SwaggerConfig.java
backend/hackathon/src/main/java/_th/hackathon/domain/reservation/controller/: ReservationController.java  ReservationQueryController.java
backend/hackathon/src/main/resources/: application.yml
backend/hackathon/src/test/java/_th/hackathon/: HackathonApplicationTests.java
backend/reservation/reservation/: Dockerfile
backend/reservation/reservation/src/main/resources/: application.yml
backend/reservation/reservation/src/test/resources/: application-test.yml
backend/seat/controller/: Cargo.toml
backend/seat/controller/src/: lib.rs  seat_controller.rs
backend/seat/model/: Cargo.toml
backend/seat/model/src/: lib.rs  model_seat.rs
backend/seat/service/: Cargo.toml
backend/seat/service/src/: lib.rs  mutation.rs  query.rs
backend/seat/service/test/: mock.rs
backend/src/: index.js  main.py  main.rs  mypy.ini
backend/src/config/: database.js  redis.js
backend/src/database/: connection.py  orm.py  repository.py
backend/src/main/java/com/example/demo/: DemoApplication.java  GlobalExceptionHandler.java  ReservationFailedException.java  ReservationRequest.java  Seat.java  SeatController.java  SeatNotFoundException.java  SeatRepository.java  SeatService.java
backend/src/main/java/com/example/demo/config/: SeatConstants.java
backend/src/main/java/com/example/demo/controller/: SeatController.java
backend/src/main/java/com/example/demo/dto/: ReservationRequest.java  SelectionRequest.java
backend/src/main/java/com/example/demo/entity/: Seat.java
backend/src/main/java/com/example/demo/exception/: ConcurrentReservationException.java  GlobalExceptionHandler.java  ReservationFailedException.java  SeatNotFoundException.java
backend/src/main/java/com/example/demo/repository/: SeatRepository.java
backend/src/main/java/com/example/demo/service/: SeatService.java
backend/src/main/resources/: application.properties
backend/src/models/: Booking.js  BookingModel.js  Concert.js  ConcertModel.js  Seat.js  SeatModel.js  index.js
backend/src/routes/: bookings.js  concerts.js  concurrency.js  queue.js
backend/src/schema/: request.py
backend/src/services/: BookingService.js  ConcurrencyService.js  DataStore.js
backend/src/test/java/com/example/demo/: SeatControllerTest.java  SeatServiceTest.java
backend/src/test/java/com/example/demo/controller/: SeatControllerTest.java
backend/src/test/java/com/example/demo/integration/: SeatIntegrationTest.java
backend/src/test/java/com/example/demo/service/: SeatConcurrencyTest.java  SeatConcurrencyValidationTest.java  SeatServiceTest.java
backend/src/test/resources/: application-test.properties
backend/src/tests/: conftest.py  test_main.py
backend/src/utils/: PriorityQueue.js  SeatLock.js
backend/test/: Cargo.toml  seat_test.rs
backend/test/src/: lib.rs  seat_test.rs
(+609 files in other folders)
