[workspace]
members = [
	".",
	"config/api",
	"config/database",
	"config/migration",
	"seat/model",
	"seat/service",
	"seat/controller"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
version = "0.1.0"
license = "UNLICENSED"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
salvo = { version = "0.82.0", features = ["oapi"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20.0"
dotenvy = "0.15"
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
once_cell = "1.19"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[package]
name = "tickettock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
memory-seats = []

[dependencies]
tokio.workspace = true
salvo.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
redis.workspace = true
once_cell.workspace = true
anyhow.workspace = true
reqwest.workspace = true
config-api = { path = "config/api" }
config-database = { path = "config/database" }
