[workspace]
members = [
	".",
	"config/api",
	"config/database",
	"config/migration",
	"config/redis",
	"seat/model",
	"seat/service",
	"seat/controller"
, "test"]
resolver = "2"

[workspace.package]
edition = "2021"            # Temporarily downgraded from 2024 to build on stable
rust-version = "1.89.0"      # Align with builder image; bump when newer stable available
version = "0.1.0"
license = "UNLICENSED"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
salvo = { version = "0.82.0", features = ["oapi"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20.0"
dotenvy = "0.15"
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
once_cell = "1.21"
anyhow = "1"

[package]
name = "tickettock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tickettock"
path = "src/main.rs"

[features]
default = []
memory-seats = []

[dependencies]
tokio.workspace = true
salvo.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
redis.workspace = true
config_api = { package = "config-api", path = "config/api" }
config-database = { path = "config/database" }
config_redis = { path = "config/redis" }
migration = { path = "config/migration" }
seat_model = { path = "seat/model" }
test = { path = "test" }
