[package]
name = "migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "migration"
path = "src/main.rs"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
async-trait = "0.1"
tokio.workspace = true
dotenvy.workspace = true
