[package]
name = "config_redis"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
redis = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features=["rt", "macros"] }
