[package]
name = "seat-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seat-service = { path = "../service" }
seat_model = { path = "../model" }
once_cell.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
salvo.workspace = true
tracing.workspace = true
