[package]
name = "seat-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "seat_controller"
path = "src/lib.rs"

[features]
memory-seats = []

[dependencies]
seat-service = { path = "../service" }
seat_model = { path = "../model" }
config-database = { path = "../../config/database" }
once_cell.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
salvo.workspace = true
tracing.workspace = true
sea-orm.workspace = true
redis.workspace = true
config_redis = { path = "../../config/redis" }
